--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container home">
     <header class="intro">
       <img src="img/fun-bus.jpg" alt="bus in the sand">
-      <h2>Welcome To Fun Bus!</h2>
+      <h2><input value = "Welcome To Fun Bus!"></h2>
       <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
     </header>
     <section class="content-section">
@@ -65,7 +65,7 @@
     <section class="content-pick">
 
       <div class="destination">
-        <h4>Fun In The Sun</h4>
+        <h4>Fun In The Sun<span id="height"></span></h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
         <div class="btn">Sign Me Up!</div>
       </div>
@@ -85,6 +85,7 @@
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
+
 
 </body>
 </html>
